k8s/services/external/app/v-core-3/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: v-core-3
spec:
  type: ExternalName
  externalName: v-core-3.client.bar.risson.net
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
