k8s/services/external/app/v-core-3/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: v-core-3
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
    nginx.ingress.kubernetes.io/auth-url: |-
      http://ak-outpost-authentik-embedded-outpost.services-authentik.svc.c.k3s.fsn.as212024.net:9000/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
      https://v-core-3.workshop.risson.space/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
spec:
  rules:
    - host: v-core-3.workshop.risson.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: v-core-3
                port:
                  name: http
  tls:
    - hosts:
        - v-core-3.workshop.risson.space
      secretName: v-core-3-tls
